--- a/_posts/2023-06-30-testing.md
+++ b/_posts/2023-06-30-testing.md
@@ -7,3 +7,10 @@ pie title Pets adopted by volunteers
   "Cats" : 85
   "Rats" : 35
 ```
+
+@startmermaid
+pie title Pets adopted by volunteers
+  "Dogs" : 386
+  "Cats" : 85
+  "Rats" : 35
+@endmermaid
